--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login_fragment_label">Login</string>
     <string name="users_list_fragment_label">Users List</string>
     <string name="user_details_fragment_label">User Detaials</string>
+    <string name="github_user_s_avatar">Github user\'s avatar</string>
 </resources>
